style.css
/* Eric Meyer's Reset CSS v2.0 - http://cssreset.com */
html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}

html, body {
    height: 100%;
    white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
	white-space: -pre-wrap;      /* Opera 4-6 */
	white-space: -o-pre-wrap;    /* Opera 7 */
	white-space: pre-wrap;       /* css-3 */
	word-wrap: break-word;       /* Internet Explorer 5.5+ */
	white-space: normal;
	font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
	line-height: 150%;
}

nav select{
	display: none;
}
.img-size{
	display: inline-block;
	margin-right: 0.5em;
	position: relative;
}
#logo{
	margin: 0 1em;
	position: relative;
}

.hght-header{
	height: 252px;
}

.float-left{
	float: left;
}
.float-right{
	float: right;
}
.dsply-blk{
	display: block;
	clear: both;
}

li{
	list-style: disc inside;
	display: list-item;
}
.mrgn-8{
	margin: 1em;
	padding-bottom: .5em;
}

.section-text{
	position: relative;
	top: 1em;
	left: 1em;
	right: 1em;
	width: 85%;
	padding: 1em;
	background: #259014;
	opacity: .7;
	filter: alpha(opacity=70);

}
	.section-text p, .section-text h2{
		color: #fff;
		font-weight:bold;
	}
	

h1{
	font-size: 2.5em;
	line-height: 1em;
	font-weight: bold;
	color: #259014;
}
.fnt-2{
	font-size: 1.5em;
	line-height: 1.25em;
}
.italic{
	font-style: italic;
}
h2{
	font-size: 1.5em;
}
.img-section{
	height: 40%;
	width: 100%;
	margin-top: -1em;
}

#img-nutrition{
	background: url(images/food-Healthy-Eating.jpg) no-repeat center center fixed;
	width: 100%;
	-webkit-background-size: cover;
  	-moz-background-size: cover;
  	-o-background-size: cover;
  	background-size: cover;
}
#img-exercise{
	background: url(images/exercise.jpg) no-repeat center center fixed;
	width: 100%;
	-webkit-background-size: cover;
  	-moz-background-size: cover;
  	-o-background-size: cover;
  	background-size: cover;
}
#img-stress{
	background: url(images/killer_stress.jpg) no-repeat center center fixed;
	width: 100%;
	-webkit-background-size: cover;
  	-moz-background-size: cover;
  	-o-background-size: cover;
  	background-size: cover;	
}
.button{
	padding: .5em;
	border-radius: .5em;
	margin: .5em 0;
	display: inline-block;
	font-weight: bold;
}
	.button-grn{
		background: #259014;
		color: #fff;
	}
	.button-wht{
		background: #fff;
		color: #259014;
	}

.button:hover{
	-webkit-box-shadow: inset 0px 0px 10px #175a0c;
	-moz-box-shadow: 	inset 0px 0px 10px #175a0c;
	box-shadow: 		inset 0px 0px 10px #175a0c;
}	



@media only screen and (max-width: 1023px) {

	#logo{
		height: 80%;
		content: url(fitlogo.mobile.png);
	}
  	nav a { 
		display: none; 
	}

  	nav select { 
  		display: block;
  		margin: 1em;
  		float: right; 
  		height: 2em;
  		width: 40%; 
  		right: 0px;
		top: 0px;
		position: absolute;
		z-index: 0;
  	}

  	#top-static{
  		top: 0px;
		position: fixed;
		z-index: 1;
		background: rgba(37, 144, 20, .8);
		padding: 1em 0; 
		width: 100%;
		height: 5%;
  	}
  	.img-size{
  		width: 50%;
  	}

  	.mrgn-top{
  		margin-top: 6em;
  	}

	.hght-header{
		height: 70%;
	}

	body{
		font-size: 60%;
	}
	a.button{
		display: none;
	}

	textarea{
		width: 100%;
	}

	#img-nutrition{
		background: url(images/food-Healthy-Eating.mobile.jpg) no-repeat center center fixed;	
	}
	#img-exercise{
		background: url(images/exercise.mobile.jpg) no-repeat center center fixed;
	}
	#img-stress{
		background: url(images/killer_stress.mobile.jpg) no-repeat center center fixed;
	}

@media only screen and (min-width: 1024px) and (max-width: 1136px){
	.img-size{
  		width: 30%;
  	}
	#logo{
		height: 80%;
		content: url(fitlogo.mobile.png);
	}
  	nav a { 
		display: none; 
	}

  	nav select { 
  		display: block;
  		margin: 1em;
  		float: right; 
  		height: 2em;
  		width: 40%; 
  		right: 0px;
		top: 0px;
		position: absolute;
		z-index: 0;
  	}

  	#top-static{
  		top: 0px;
		position: fixed;
		z-index: 1;
		background: rgba(37, 144, 20, .8);
		padding: 1em 0; 
		width: 100%;
		height: 5%;
  	}

  	.mrgn-top{
  		margin-top: 6em;
  	}

	.hght-header{
		height: 45%;
	}
	
	.first-section{
		background: url(images/healthy-body.jpg) no-repeat center center;
		background-size: cover;
		height: 30%;
		width: 100%;
		margin-top: -1em;
	}

	body{
		font-size: 90%;
	}
	a.button{
		display: none;
	}

	textarea{
		width: 100%;
	}

	#img-nutrition{
		background: url(images/food-Healthy-Eating.mobile.jpg) no-repeat center center fixed;	
	}
	#img-exercise{
		background: url(images/exercise.mobile.jpg) no-repeat center center fixed;
	}
	#img-stress{
		background: url(images/killer_stress.mobile.jpg) no-repeat center center fixed;
	}

}

